grid scroll bug fixed on firefox & safari

--- a/src/Assets/src/scss/app/main.scss
+++ b/src/Assets/src/scss/app/main.scss
@@ -43,9 +43,7 @@
     //background: green;
   }
   #tp_grid{
-    height: -moz-calc(100vh - 92px);
-    height: -webkit-calc(100vh - 92px);
-    height: calc(100vh - 92px);
+
     width:100%;
     overflow-y: hidden;
     border: none;
